--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,11 @@
+:root {
+  --biruMuda: #1792d2;
+  --biruTua: #143774;
+  --hitam: #717171;
+  --primary: #ffffff;
+  --putih: #f8f8f8;
+}
+
 *,
 *::before,
 *::after {
@@ -17,15 +25,7 @@ html {
 body {
   font-family: "Montserrat", sans-serif;
   line-height: 1.3;
-  color: var(--primary);
-}
-
-:root {
-  --biruMuda: #1792d2;
-  --biruTua: #143774;
-  --hitam: #717171;
-  --primary: #ffffff;
-  --putih: #f8f8f8;
+  background-color: var(--primary);
 }
 
 h1 {
@@ -34,7 +34,7 @@ h1 {
 }
 
 a {
-  color: var(--primary);
+  color: var(--black);
 }
 
 /* ------- HEADER -------- */
@@ -81,6 +81,85 @@ header {
   border-bottom: 2px solid var(--biruMuda);
 }
 
+/* ----------- MAIN ------------ */
+main {
+  display: flex;
+  gap: 20px;
+  justify-content: space-evenly;
+  max-width: 80%;
+  margin: 5rem auto;
+}
+
+section {
+  flex-basis: 70%;
+  padding: 2rem;
+}
+
+.article-header img {
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  height: 308px;
+  width: 100%;
+}
+
+.article-content a {
+  color: var(--biruMuda);
+  font-weight: 500;
+  font-style: italic;
+}
+
+.article-content h3 {
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: var(--biruTua);
+}
+
+.article-content a:hover {
+  font-weight: 700;
+}
+
+.article-info {
+  font-size: 0.8em;
+}
+
+/* ----------- MAIN PAGE ----------- */
+
+.main-page .article-info {
+  margin: 1.25em 0;
+}
+
+.main-page .article-content p {
+  margin: 1.625em 0;
+  text-align: justify;
+}
+
+/* ------------ ASIDE ------------- */
+aside {
+  flex-basis: 30%;
+}
+
+.about-me {
+  padding: 2rem 5rem;
+  text-align: left;
+  /* -webkit-box-shadow: 0px 22px 51px -34px rgba(113, 113, 113, 0.59);
+  -moz-box-shadow: 0px 22px 51px -34px rgba(113, 113, 113, 0.59);
+  box-shadow: 0px 22px 51px -34px rgba(113, 113, 113, 0.59); */
+}
+
+.aside-header {
+  margin-bottom: 1em;
+}
+
+.aside-header h2 {
+  color: var(--biruTua);
+}
+
+.aside-header img {
+  margin-top: 1rem;
+  max-width: 6rem;
+}
+
 /* ----------- MEDIA QUERIES ---------- */
 @media only screen and (max-width: 768px) {
   .nav-menu {
@@ -118,5 +197,9 @@ header {
 
   .hamburger.active .bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
+  }
+  main {
+    flex-direction: column;
+    align-items: center;
   }
 }
